--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build/
 dist/
 wheels/
 *.egg-info
+.DS_Store
 
 # Virtual environments
 .venv
@@ -12,3 +13,6 @@ wheels/
 # Python environment files
 .env
 playground.ipynb
+
+# exclude screen recordings
+*.mov
